# oahl

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  demo.cast  docker-compose.yml  gen_cast.py  oahl-attachment-profile.schema.json  oahl-config.example.json  oahl-config.json  oahl-config.schema.json  oahl-execution-result.schema.json  openapi.yaml  package-lock.json  package.json  specs.md  tsconfig.base.json
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
adapters/adapter-mock/: oahl-manifest.json  package.json  tsconfig.tsbuildinfo
adapters/adapter-rtl-sdr/: oahl-manifest.json  package.json  tsconfig.tsbuildinfo
docs/: adapter-development.md  adapter-guide.md  agent-integration-guide.md  api-reference.md  architecture.md  asyncapi.yaml  demo-recording-guide.md  good_first_issues.md  hardware-owner-guide.md  marketplace-billing-guide.md  oahl-protocol-v1.md  oahl-standardization-roadmap.md  overview.md  sdk-strategy.md  security-guide.md  semantic-metadata-guide.md  transport-attachment-profiles.md  transport-plugin-architecture.md  wot-alignment.md
examples/: agent_test.py
registry/: README.md  adapters.txt  registry.json
scripts/: benchmark-suite.js  benchmark.js  bump-workspace-versions.mjs
sdk-python/: README.md  client.py  pyproject.toml
sdk-python/oahl/: __init__.py  client.py
sdk-python/oahl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
skills/: adapter-builder.SKILL.md  hardware.SKILL.md  tools.json
(+15 files in other folders)
