[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oahl"
version = "0.1.2"
description = "Python SDK for Open Agent Hardware Layer (OAHL)"
readme = "README.md"
authors = [
    { name = "Fred Abila", email = "fred@oahl.org" }
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
]

[project.urls]
"Homepage" = "https://github.com/fredabila/oahl"
